2005-11-10  Srinivasa Ragavan <sragavan@novell.com>

	* e-shell-settings-dialog.c (set_dialog_size) 
	(e_shell_settings_dialog_init): Set the size of the preference
	window so that it doesnt flicker. Hide it till all the pages are
	loaded.

2005-10-25  Harish Krishnaswamy  <kharish@novell.com>

	* main.c: (show_development_warning): Update
	version and bugzilla information.

2005-09-23  S.Antony Vincent Pandian <santony@gmail.com>

	solves bug # 307780

	* e-shell-window.h : added the prototype for the function
	e_shell_window_peek_statusbar(..);
	
	* e-shell-window.c : show/hide the status bar widget based on the saved
	property.
	retreive the status bar's previous status and set in UI.
	define the function e_shell_window_peek_statusbar() which retrieves
	the status bar widget for e-shell-window-commands.c
	
	* e-shell-window-commands.c : view_statusbar_item_toggled_handler()
	is the component listener for the "View Status Bar" menu item.it 
	handles the click event in the menu item "View status Bar".The
	state of the status bar is also saved every time an event occurs
	on it.
	setting the component listener to the component.
		
2005-08-28  Harish Krishnaswamy  <kharish@novell.com>

	* e-shell-window-commands.c: Update credits.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* e-shell-window-commands.c: include missing e-error.h

	* e-component-registry.c (query_components): cast away a seemingly
	spurious warning.

2005-08-17  Not Zed  <NotZed@Ximian.com>

	* e-shell.c (impl_Shell_handleURI): fix warning.
	(impl_Shell_findComponent): fix signature for warning.

2005-08-16  Not Zed  <NotZed@Ximian.com>

	** See bug #312668.

	* e-shell.c (set_line_status, set_line_status_complete)
	(set_line_status_finished): new code to set componetns on/offline.
	(e_shell_go_online, e_shell_go_offline): use new interface.
	(offline_procedure_started_cb, offline_procedure_finished_cb): removed.
	(impl_dispose): cleanup line status listener.